# neosmartblue.py

./: .gitignore  PUBLISHING.md  README.md  pyproject.toml
.github/workflows/: publish.yml  python-publish.yml  test.yml
src/neosmartblue/py/: device.py  parse_status.py  scan.py
