[project]
name = "neosmartblue-py"
version = "0.1.0"
description = ""
authors = [
    {name = "ikifar2012",email = "ikifar2012@users.noreply.github.com"}
]
readme = "README.md"
requires-python = ">=3.13,<3.14"
dependencies = [
    "bleak (>=0.22.3,<0.23.0)"
]

[tool.poetry]
packages = [{include = "neosmartblue", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
